# grounded-resume

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  README_CN.md  package-lock.json  pyproject.toml  skills-lock.json
.github/workflows/: ci.yml
.playwright-cli/: page-2026-04-30T08-34-01-744Z.yml  page-2026-04-30T08-34-09-872Z.yml  page-2026-04-30T08-34-18-860Z.yml
data/: resume_jobs_a2_bytedance_ai_product.md  resume_jobs_a6_美团_AI产品经理.md  resume_jobs_a6_美团_AI产品经理_可信度报告.md  resume_jobs_b2_xiaohongshu_pe.md
docs/: Baseline 综合分析报告 v1.0.md  Baseline 评测执行模板 v0.1.md  Baseline 评测框架 v0.1.md  B类 Deep Test 样本集 v0.1.md  C类专用AI简历工具SmokeTest执行方案 v0.1.md  Deep Test JD 候选池分析 v0.1.md  D类开源项目RepoCapabilityReview执行方案 v0.1.md  Smoke Test 样本输入包模板 v0.1.md  ai产品经理素材.md  仓库结构重构方案 v0.1.md  完美简历案例调研报告.md  用户手册.md  第一轮 Smoke Test 样本集 v0.2.md  项目进展存档_2026-05-03-v2.md  项目进展存档_2026-05-03.md
docs/superpowers/: acceptance-report.md  manual-test-integration.md
frontend/: .env.local.example  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: confirmation-board.tsx  dot-matrix.tsx  evidence-card.tsx  fluid-background.tsx  gap-report.tsx  glass-card.tsx  (+7 more)
outputs/: smoke_summary.md
outputs_c_tools/: c_tools_execution_checklist.md
outputs_d_repos/: repo_capability_matrix.md
outputs_deep/: deep_summary.md  deep_test_execution_checklist.md
product/: README.md
research/: README.md
tests/: quality_verification.py  test_ideal_generator.py
(+412 files in other folders)
