[project]
name = "grounded-resume"
version = "0.1.0"
description = "Grounded, evidence-traceable resume generation for Chinese internship candidates."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "ruff>=0.5,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
ignore = []

[tool.basedpyright]
extraPaths = ["src"]
