[project]
name = "grounded-resume"
version = "0.1.0"
description = "Grounded, evidence-traceable resume generation for Chinese internship candidates."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7,<3.0",
  "langgraph>=0.2,<0.3",
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "basedpyright>=1.0,<2.0",
  "pytest>=8.2,<9.0",
  "ruff>=0.5,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
ignore = []

[tool.basedpyright]
extraPaths = ["src"]
typeCheckingMode = "basic"
